<resources>
    <string name="app_name">RoulantLogin</string>
    <string name="title_activity_volunteer">VolunteerActivity</string>
    <string name="santropol_roulant">Santropol Roulant!</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_to">Welcome to</string>
    <string name="log_in">Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="ps_personal_title">PERSONAL</string>
    <string name="ps_personal_firstname">FIRST NAME</string>
    <string name="ps_personal_lastname">LAST NAME</string>
    <string name="ps_birthday_title">BIRTHDAY</string>
    <string name="ps_birthday_dob">DATE OF BIRTH</string>
    <string name="ps_contact_title">CONTACT</string>
    <string name="ps_contact_email">EMAIL ADDRESS</string>
    <string name="ps_contact_phone">PHONE NUMBER</string>
    <string name="ps_address_title">ADDRESS</string>
    <string name="ps_address_line">ADDRESS LINE</string>
    <string name="ps_address_city">CITY</string>
    <string name="ps_address_postal">POSTAL CODE</string>
    <string name="ps_username_title">YOUR ROULANT USER NAME</string>
    <string name="ps_save_button">Save Changes</string>

    <string name="erc_confirm_button">Sign Up For Event</string>
    <string name="erc_date_header">Date</string>
    <string name="erc_start_header">Time Start</string>
    <string name="erc_end_header">Time End</string>
    <string name="erc_type_header">Date</string>

    <string name="title_activity_maps">Map</string>
    <string name="Welcome">What good fortune brings you here?</string>
    <string name="unlock_body_text1">To use our app, you need to attend on of our info sessions for volunteers. You will be given an access code that you can input below</string>
    <string name="unlock_body_text2">Call us at (514) 284-9335 for information about our next info sessions</string>
    <string name="unlock_login_text">I already have an account</string>
    <string name="enter_code_text">Enter Code</string>
    <string name="santropol_logo">Santropol Logo</string>
    <string name="where_do_you_live">Where do you live?</string>
    <string name="_111_roy_east_montreal_qc_h2w_1m1">111, Roy East, Montreal (QC) H2W
1M1</string>
    <string name="info_santropolroulant_org"
        translatable="false">info@santropolroulant.org</string>
    <string name="_514_284_9335" translatable="false">(514) 284-9335</string>
    <string name="let_s_get_in_touch">Let\'s get in touch!</string>
    <string name="let_us_know_about_you">Let us know about you!</string>
    <string name="already_signed_up_login">Already Signed Up? Login</string>
    <string name="next">Next</string>
    <string name="almost_done">Almost done!</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_user_name">YOUR USER NAME</string>
    <string name="finish">Finish</string>
    <string name="username_instruction">You need to use this given username to login
to your account. It is made up of the first two letters of your family name followed
by your phone number.</string>
    <string name="your_account_is_now_set_up">Your Account is now set up.</string>
    <string name="volunteer">Volunteer</string>
    <string name="do_good_feel_good"><![CDATA[Do Good & Feel Good]]></string>
    <string name="my_schedule">My Schedule</string>
    <string name="check_your_schedule">Check your schedule</string>
    <string name="profile">Profile</string>
    <string name="update_information">Update Information</string>
    <string name="contact_us">Contact Us</string>
    <string name="inquiries_and_more">Inquiries and More</string>
    <string name="powered_by_the_mcgill_food_analytics_centre">Powered by the McGill
Food Analytics Centre</string>
    <string name="username">Username*</string>
    <string name="password_2">Password</string>
    <string name="login">Login</string>
    <string name="username_description">*Your username is made up of the first two
letters of your last name followed by your phone number.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="infinite_love">Every day, our services bring an infinite amount of
love to our members</string>
    <string name="register">Register</string>
    <string name="welcome_to_nsantropol_roulant">Welcome to Santropol Roulant</string>
    <string name="_0" translatable="false">0</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="which_time_of_the_day_would_you_prefer">Which time of the day would
you prefer?</string>
    <string name="next_caps">NEXT</string>
    <string name="transport_mode">Which mode of transportation would you prefer for
delivery?</string>
    <string name="non_driver">Non-Driver</string>
    <string name="driver">Driver</string>
    <string name="what_you_are_signed_up_for">What you are signed up for?</string>
    <string name="swipe_left_to_delete">Swipe left to delete event*</string>
    <string name="meal_delivery">Meal Delivery</string>
    <string name="kitchen">Kitchen</string>
    <string name="activity_type">What type of activity would you like to sign up
for?</string>
    <string name="delivery_description">Help deliver a warm meal and a smiling
greeting that can help make our clients day!</string>
    <string name="kitchen_description">Work with a chef to bring together all of the
elements to prepare the meal of the day!</string>
    <string name="sign_up">Sign Up</string>
    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="event_information">Event Information</string>
    <string name="first_shift">First Shift?</string>
    <string name="remarks">Any remarks you want us to know</string>
    <string name="afternoon_shift">Afternoon</string>
    <string name="morning_shift">Morning</string>
    <string name="password_reset">Enter your email to reset your password.</string>
    <string name="change_lang">Change Language</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_email">Please enter your registered email</string>
    <string name="reset_email_sent">Password reset email sent</string>
    <string name="saturday">saturday</string>
    <string name="kitchen_9_am">Kitchen 9:00am-12:00pm</string>
    <string name="kitchen_930_am">Kitchen 9:30-12:30pm</string>
    <string name="kitchen_1_pm">Kitchen 1:00-3:30pm</string>
    <string name="kitchen_130_pm">Kitchen 1:30-4:00pm</string>
    <string name="delivery_215_pm">Meal Delivery 2:15-5:30pm</string>
    <string name="delivery_245_pm">Meal Delivery 2:45-6:00pm</string>
    <string name="first_time">First time doing this activity?</string>
    <string name="signup">Sign up!</string>
    <string name="cancel">Cancel</string>
    <string name="already_signed_up">You are already signed up!</string>
    <string name="enter_details">Please enter all the details</string>
    <string name="address_number">Your address should start with a number!</string>
    <string name="reg_success">Registration Successful!</string>
    <string name="passwords_match">Passwords must match!</string>
    <string name="username_alphanumeric">Username should be alphanumeric.</string>
    <string name="login_failed_username">Login Failed: Incorrect Username</string>
    <string name="login_success">Login Successful</string>
    <string name="login_fail_password">Login Failed: Incorrect Password</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="email_error">Error in sending password reset email</string>
    <string name="changes_saved">Changes have been saved!</string>
    <string name="change_smth">Please Change Something!</string>
    <string name="login_issue">Something went wrong with your Login information. Please login again</string>
    <string name="enter_a_code">Please enter a code</string>
    <string name="invalid_code">Invalid code</string>
    <string name="unable_fetch_events">Unable to Fetch Events</string>
    <string name="confirm">Confirm?</string>
    <string name="unregister">Are you sure you want to unregister from this event?</string>
    <string name="yes">Yes</string>
    <string name="full">Full</string>
    <string name="event">Event:\u0020"</string>
    <string name="time">Time:\u0020"</string>
    <string name="driving_delivery">Driving Delivery</string>
    <string name="hello">Hello,\u0020</string>
    <string name="priority">PRIORITY</string>
    <string name="driver_description">Deliver meals to those in areas that are further away! If you love to drive, this option is for you.</string>
    <string name="non_driver_description">Deliver meals to those in areas that are closer to Roulant HQ! A great way to get fresh air.</string>
    <string name="event_cancel_denied">The event is less than 48 hours away. Please call us at (514) 284-9335 in order to cancel.</string>
</resources>
