<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/erc_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erc_confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_date_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/erc_date_header"
                android:layout_column="1"/>

            <TextView
                android:id="@+id/event_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_column="2"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_time_start_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/erc_start_header"
                android:layout_column="1"/>

            <TextView
                android:id="@+id/event_time_start_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_column="2"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_time_end_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/erc_end_header"
                android:layout_column="1"/>

            <TextView
                android:id="@+id/event_time_end_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_column="2"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_type_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/erc_type_header" />

            <TextView
                android:id="@+id/event_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>