<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/main_background">

    <LinearLayout
        android:id="@+id/info_session_info1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/prefgroup_divider"
        android:orientation="vertical"
        android:padding="@dimen/small_margin"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/info_session_info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/unlock_logo"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_gravity="start|left"
                android:contentDescription="@string/santropol_logo"
                app:srcCompat="@drawable/santropol_logo" />

            <TextView
                android:id="@+id/unlock_welcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Welcome"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/unlock_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/unlock_description1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/ps_pref_topmargin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/unlock_description1a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/shape_save"
                        android:text="@string/unlock_body_text1"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/font_larger"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/unlock_description2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/ps_pref_topmargin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/unlock_description2a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/shape_save"
                        android:text="@string/unlock_body_text2"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/font_larger"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/code_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/preferences_personal_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/ps_pref_topmargin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/code_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/enter_code_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#5F9856"
                    android:text="@string/enter_code_text"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/preference_address_postal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/ps_pref_topmargin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/unlock_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unlock_login_text"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="30dp" />




</LinearLayout>